--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://raghavahuja2801.github.io/Disney-Clone/",
+  "homepage": "https://raghavahuja2801.github.io/disneyclone/",
   "name": "disney-clone",
   "version": "0.1.0",
   "private": true,
